--- a/Arbeidskrav_1/style.css
+++ b/Arbeidskrav_1/style.css
@@ -1,68 +1,80 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');
 
-:root{
-    --darkblue: #2A324B;
+/* Variabler for farger og font */
+:root {
+        --white: #fff;
     --lightblue: #58699D;
     --lightgrey: #E1E5EE;
-    --white: #fff;
+    --darkblue: #2A324B;
    
-    --font:'Montserrat', sans-serif;
-    --fontsize:var(--rootsize);
+    --font: 'Montserrat', sans-serif;
+    --fontsize: var(--rootsize);
     --maxsize: 1200px;
 }
 
-body{
+/* Styling for body */
+body {
     background-color: var(--lightgrey);
     font-family: var(--font);
     font-size: var(--rootsize);
-    margin:0px;
+    margin: 0;
+    color: #2A324B;
 }
 
-nav{
+/* Styling for navigasjonsmeny */
+nav {
     display: flex;
     justify-content: center;
     text-align: center;
 }
 
-nav a{
+/* Styling for lenkene i navigasjonsmenyen */
+nav a {
     display: inline-block;
     padding: 1.2rem 4.1rem;
     color: var(--white);
     background-color: var(--darkblue);
     text-decoration: none;
     text-align: center;
-    margin-top:115px;
+    margin-top: 115px;
+    font-weight: 700; 
 }
 
-nav ul{
+
+/* Styling for ul i navigasjonen */
+nav ul {
     padding: 0;
     list-style-type: none;
-    display: inline-block;
+    display: flex;
     gap: 1rem;
     margin: 1rem;
 }
 
-nav ul :hover{
-    color:var(--darkblue);
+/* Aktiv lenke */
+.active {
     background-color: var(--white);
+    color: var(--darkblue);
 }
-    
 
+/* Styling for container som holder innholdet */
 #container {
-    width: 70%;
+    width: 74%;
     max-width: var(--maxsize);
     margin: auto;
-    min-height:200px;
+    min-height: 330px;
     margin-top: -16px;
     padding: 38px;
     background-color: var(--white);
+    
 }
-h1{
-    font-size:1.5rem;
+
+/* Styling for h1-elementer (overskrifter) */
+h1 {
+    font-size: 1.5rem;
+    font-weight: bold;
 }
-p{ 
+
+/* Styling for p-elementer (paragrafer) */
+p { 
    font-size: 1rem;
 }
-
-
-
